tests/fixtures/effect-compiler/errors/EFX2002.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  #pragma define acc(a) acc(a + 1)
  acc(0)
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
